# rocOdyssey

./: CMakeLists.txt  README.md
plot/: plot_task1.gp  plot_task1_1.gp  plot_task2_1.gp
src/: Odyssey.cpp  Odyssey.cu  Odyssey.hip  Odyssey_def.h  Odyssey_def_fun.h  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h
